--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <body>
         <div class="row">
             <div class="col s8 offset-s2">
-                <div class="card-panel">
+                <div id="message-form" class="card-panel">
                     <form>
                         <label>Enter a Secret Message</label>
                         <input id="message-input" />
                         <button class="btn">Create</button>
                     </form>
                 </div>
-                <div>
+
+                <div id="link-form" class="card-panel hide">
+                    <div>
                     Share this link with a friend
                     <input id="link-input" />
                 </div>
+                    </div>
             </div>
         </div>
         <script src="script.js"></script>
